BUG: Fix alignment of search button.
QA: In IE10 on a datacard page with a search button, verify that the search button is on the same
row as the search input field (ie not above it).

--- a/app/styles/dataCards/card.sass
+++ b/app/styles/dataCards/card.sass
@@ -119,16 +119,19 @@ div[ng-switch="cardType"]
   .input-group
     display: table
     width: 100%
+
     .form-control,
     .input-group-addon
       display: table-cell
+      vertical-align: top
+
     .input-group-addon
       width: 1%
 
       button
         .icon-search
-          font-size: .7rem
-          padding: .2rem
+          font-size: 0.7rem
+          padding: 0.2rem
 
         &:hover
           .icon-search
