--- a/app/styles/dataCards/main.sass
+++ b/app/styles/dataCards/main.sass
@@ -309,17 +309,17 @@ $facets-list-width: 20%
   position: relative
 
   $thickness: 0.2em
-  $color: rgba(255,255,255,.9)
+  $color: rgba(255, 255, 255, 0.9)
   &::before
     position: absolute
     bottom: 50%
     right: 50%
-    margin: 0 -.65em -.3em 0
+    margin: 0 -0.65em -0.3em 0
 
     display: block
     content: '\feff'
-    width: .8em
-    height: .8em
+    width: 0.8em
+    height: 0.8em
     border: $thickness solid $color
     @include prefixer(border-radius, 100%)
 
@@ -327,12 +327,12 @@ $facets-list-width: 20%
     position: absolute
     top: 50%
     left: 50%
-    margin: .2em 0 0 .4em
+    margin: 0.2em 0 0 0.4em
 
     display: block
-    height: .5em
+    height: 0.5em
     content: '\feff'
     @include prefixer(transform-origin, 0 0)
     @include prefixer(transform, rotate(-45deg))
-    border: .8 * $thickness solid $color
-    @include prefixer(border-radius, 0 0 .5em .5em)
+    border: 0.8 * $thickness solid $color
+    @include prefixer(border-radius, 0 0 0.5em 0.5em)
